# Blog-Website

./: README.md
blog frontend template/: about.html  add-category.html  add-post.html  add-user.html  blog.html  category-posts.html  contact.html  dashboard.html  edit-category.html  edit-post.html  edit-user.html  index.html  manage-categories.html  manage-users.html  post.html  services.html  signin.html  signup.html
mic_blogs/: Dockerfile  manage.py  pyproject.toml
mic_blogs/blog/: models.py  views.py
mic_blogs/blog/migrations/: 0001_initial.py  0002_alter_blogpage_body.py  0002_blogpage.py  0003_blogpage_markdown_alter_blogpage_body.py  0004_remove_blogpage_markdown.py  0005_blogpage_markdown.py  0006_blogpage_image.py
mic_blogs/blog/templates/blog/: about.html  blog_index_page.html  blog_page.html  contact.html  home_view.html  search_results.html
mic_blogs/home/migrations/: 0003_homepage_body.py
mic_blogs/home/templates/home/: home_page.html
mic_blogs/mic_blogs/: urls.py  wsgi.py
mic_blogs/mic_blogs/settings/: base.py  dev.py
mic_blogs/mic_blogs/static/css/: styles.css
mic_blogs/mic_blogs/static/js/: main.js
mic_blogs/mic_blogs/templates/: base.html
