[tool.poetry]
name = "mic-blogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mic_blogs"}]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^5.1.1"
wagtailcodeblock = "^1.29.0.1"
wagtail-markdown = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
